# simcoupe

./: .appveyor.yml  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  ChangeLog.md  ChangeLog.txt  License.txt  Manual.md  ReadMe.md  ReadMe.txt  SimCoupe.rtf  SimCoupe.txt  config.h.in
.github/workflows/: linux-ci.yml  linux-deb.yml  macos-ci.yml  macos-dmg.yml  windows-ci.yml  windows-zip.yml
Allegro/: Display.cpp  Display.h  Floppy.cpp  Floppy.h  IDEDisk.cpp  IDEDisk.h  Input.cpp  Input.h  MIDI.cpp  MIDI.h  Makefile  OSD.cpp  OSD.h  README.txt  Sound.cpp  Sound.h  UI.cpp  UI.h  Video.cpp  Video.h  allegro.cfg
Allegro/Win32/: SimCoupe.dsp  SimCoupe.rc  SimCoupe.sln  SimCoupe.vcproj  resource.h
Base/: ALBoot.h  ATA.cpp  ATA.h  AVI.cpp  AVI.h  Action.cpp  Action.h  Actions.cpp  Actions.h  AtaAdapter.cpp  AtaAdapter.h  Atom.cpp  Atom.h  AtomLite.cpp  AtomLite.h  BlipBuffer.cpp  BlipBuffer.h  BlueAlpha.cpp  BlueAlpha.h  Breakpoint.cpp  Breakpoint.h  CBops.h  CDisk.cpp  CDisk.h  CDrive.cpp  CDrive.h  CPU.cpp  CPU.h  CScreen.cpp  CScreen.h  CStream.cpp  CStream.h  Clock.cpp  Clock.h  Debug.cpp  Debug.h  Disassem.cpp  Disassem.h  Disk.cpp  Disk.h  (+94 more)
PocketPC/: Display.cpp  Display.h  Floppy.cpp  Floppy.h  IDEDisk.cpp  IDEDisk.h  Input.cpp  Input.h  MIDI.cpp  MIDI.h  OSD.cpp  OSD.h  README.txt  SimCoupe.html  SimCoupe.inf  SimCoupe.ini  SimCoupe.rc  SimCoupe.txt  SimCoupe.vcp  SimCoupe.vcw  Sound.cpp  Sound.h  UI.cpp  UI.h  Video.cpp  Video.h  afxres.h  eula.txt  resource.h
Resource/: atom.rom  samdos2.map  samports.map  samrom.map
SDL/: Audio.cpp  Audio.h  Display.cpp  Display.h  Floppy.cpp  Floppy.h  IDEDisk.cpp  IDEDisk.h  Input.cpp  Input.h  MIDI.cpp  MIDI.h  Makefile  OSD.cpp  OSD.h  SDL12.cpp  SDL12.h  SDL20.cpp  SDL20.h  SDL20_GL3.cpp  SDL20_GL3.h  SDL_GL.cpp  SDL_GL.h  Sound.cpp  Sound.h  UI.cpp  UI.h  Video.cpp  Video.h
SDL/OSX/: Credits.html  Info-SimCoupe.plist  Info-SimCoupe.plist.in  Options.h  Options.m  SDLMain.h  SDLMain.m  SimCoupe.icns  Volume.icns  file_blank.icns  file_dsk.icns  file_mgt.icns  file_sad.icns  file_sbt.icns  file_sdf.icns  file_td0.icns
SDL/OSX/English.lproj/: InfoPlist.strings
SDL/OSX/Options.nib/: classes.nib  info.nib  keyedobjects.nib
SDL/OSX/SDLMain.nib/: classes.nib  info.nib  objects.nib
SDL/OSX/SimCoupe.fsproj/: project.plist
SDL/OSX/SimCoupe.xcodeproj/: project.pbxproj
SDL/QNX/: Icon.wgti  simcoupe.qpg
SDL/Win32/: SimCoupe.dsp  SimCoupe.dsw  SimCoupe.rc  SimCoupe.sln  SimCoupe.vcproj
Win32/: Audio.cpp  Audio.h  Custom.manifest  D3D11.cpp  D3D11.h  D3D11Video.cpp  D3D11Video.h  Direct3D9.cpp  Direct3D9.h  DirectDraw.cpp  DirectDraw.h  Display.cpp  Display.h  Floppy.cpp  Floppy.h  IDEDisk.cpp  IDEDisk.h  IconOnly.rc  Input.cpp  Input.h  MIDI.cpp  MIDI.h  ODMenu.cpp  ODMenu.h  OSD.cpp  OSD.h  SimCoupe.dsp  SimCoupe.exe.manifest  SimCoupe.nsi  SimCoupe.rc  SimCoupe.sln  SimCoupe.vcproj  SimCoupe.vcxproj  SimCoupe.vcxproj.filters  Sound.cpp  Sound.h  UI.cpp  UI.h  Video.cpp  Video.h  (+5 more)
Win32/Shaders/: D3D11_Aspect_VS.hlsl  D3D11_Blend_PS.hlsl  D3D11_Copy_VS.hlsl  D3D11_Palette_PS.hlsl  D3D11_Sample_PS.hlsl  D3D9_PS.hlsl  D3D9_VS.hlsl  PixelShader.hlsl
cmake/: FindDirectX.cmake  FindSAASound.cmake  FindSDL2.cmake  HlslCompile.cmake  PreCompiledHeaders.cmake  cpack_simcoupe.cmake
package/: install.iss  make_linux_release.sh  make_macos_release.sh  make_windows_release.ps1
